#--------------------------------------------------
SET (FESPP_ROOT_DIR ${CMAKE_SOURCE_DIR})

IF (ParaView_SOURCE_DIR)
  INCLUDE_DIRECTORIES(${VTK_INCLUDE_DIRS})
ELSE (ParaView_SOURCE_DIR)
  FIND_PACKAGE(ParaView REQUIRED)
  INCLUDE(${PARAVIEW_USE_FILE})
ENDIF (ParaView_SOURCE_DIR)

FILE (GLOB FESPP_SOURCES ${FESPP_ROOT_DIR}/src/*.cxx)
FILE (GLOB FESPP_HEADERS ${FESPP_ROOT_DIR}/src/*.h)
FILE (GLOB FESPP_FORMS ${FESPP_ROOT_DIR}/src/Resources/*.ui)
FILE (GLOB FESPP_RESOURCES ${FESPP_ROOT_DIR}/src/Resources/*.qrc)
FILE (GLOB FESPP_VTK_SOURCES ${FESPP_ROOT_DIR}/src/VTK/*.cxx)
FILE (GLOB FESPP_VTK_HEADERS ${FESPP_ROOT_DIR}/src/VTK/*.h)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${FESPP_ROOT_DIR}/cmake/modules)

pv_process_modules()

FIND_PACKAGE(Fesapi REQUIRED)
mark_as_advanced(FESAPI_INCLUDE_DIRS)
mark_as_advanced(FESAPI_LIBRARY)
INCLUDE_DIRECTORIES(${FESAPI_INCLUDE_DIRS})
set(LIBS ${LIBS} ${FESAPI_LIBRARY})

IF(PARAVIEW_BUILD_QT_GUI)
	IF(PARAVIEW_QT_VERSION VERSION_GREATER "4")
		SET (Qt5_FIND_COMPONENTS Widgets)
		INCLUDE(ParaViewQt5)
		QT5_WRAP_CPP(MOC_SRCS ${FESPP_HEADERS})					
		QT5_WRAP_UI(UI_SRCS ${FESPP_FORMS})
	ELSE()
		INCLUDE(${QT_USE_FILE})
		QT4_WRAP_CPP(MOC_SRCS ${FESPP_HEADERS})				
		QT4_WRAP_UI(UI_SRCS ${FESPP_FORMS})
	ENDIF()
	ADD_PARAVIEW_DOCK_WINDOW(
		IFACES
		IFACE_SRCS
		CLASS_NAME 	PQSelectionPanel)
		
	ADD_PARAVIEW_DOCK_WINDOW(
		IFACES2
		IFACE2_SRCS
		CLASS_NAME PQMetaDataPanel)

  # create a plugin for this panel
	ADD_PARAVIEW_PLUGIN(Fespp "1.4.0"
		DOCUMENTATION_DIR "${FESPP_ROOT_DIR}/FESPPdoc"
		SERVER_MANAGER_SOURCES  Fespp.cxx
		SERVER_MANAGER_XML Fespp.xml
        GUI_INTERFACES ${IFACES} ${IFACES2}
		GUI_RESOURCES ${FESPP_RESOURCES}
        SOURCES ${FESPP_SOURCES}
				${FESPP_VTK_SOURCES}
				${FESPP_HEADERS}	
				${FESPP_VTK_HEADERS}
				${FESPP_FORMS}
				${FESPP_RESOURCES}				
				${MOC_SRCS} 
				${UI_SRCS} 
				${IFACE_SRCS} 
				${IFACE2_SRCS} 
	)
	
	target_link_libraries(Fespp
		LINK_PRIVATE
		${FESAPI_LIBRARY})

ENDIF(PARAVIEW_BUILD_QT_GUI)



